chore: sync modulos ventas, inventario y operaciones con develop
Cambios previos a esta sesion pendientes de commitear:
catalogo (CategoryResponseDTO, CategoryRepository, CategoryService),
inventario (InventoryService, InventoryStockRepository),
ventas (SalesController, SalesService, Sale, Shift, DailySummaryDTO,
        SaleRequestDTO, SaleRepository),
operaciones (ClosingDeposit, ClosingDepositRepository, AllOperationsDTO)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>